src/styles/style.css
body {
  color: #ecfdf5;
  background-color: #273549;
  font-family: "Inter", sans-serif;
}

header {
  height: 150px;
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 20px;
}

header img {
  width: 50px;
}

h1,
h2 {
  font-family: "Karla", sans-serif;
  font-weight: 800;
  line-height: 1;
}

h1 {
  font-size: 1.5rem;
}

main {
  width: 550px;
  margin: 0 auto 50px;
  padding: 115px 52px;
  border-radius: 12px;

  background: #1f2937;
  box-shadow: rgba(0, 0, 0, 0.35) 0 5px 15px;

  position: relative;
}

h2 {
  color: #fff;
  font-size: 2.5rem;
  letter-spacing: -0.0625rem;
}

h2 span {
  display: block;
  color: #4adf86;
}

main > p {
  margin: 10px 0 50px;
  color: #d5d4d8;
  font-size: 1.25rem;
  line-height: 1.4;
}

main div {
  display: flex;
  justify-content: flex-start;
  align-self: center;
  gap: 24px;
}

.btns {
  padding-bottom: 35px;
  margin-bottom: 35px;
  border-bottom: 1px solid #2f3e53;
}

.btn {
  padding: 8px 16px;
  border: 2px solid #10b981;
  border-radius: 6px;

  color: #fff;
  background: #10b981;
  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);

  font-size: 1rem;
  line-height: 1.5;
  font-weight: 500;

  display: inline-flex;
  justify-content: center;
  align-items: center;
  gap: 10px;

  cursor: pointer;
}

.btn:hover {
  color: #10b981;
  background: transparent;
}

.btn:active {
  transform: scale(0.98);
}

.passwords p {
  width: 210px;
  height: 42px;
  padding: 5px 10px;

  border-radius: 6px;
  background: #273549;
  color: #55f991;

  font-size: 1rem;
  line-height: 2;
  font-weight: 500;

  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;

  cursor: pointer;
}

.copy:empty {
  display: none;
}

.copy {
  width: fit-content;
  padding: 8px 16px;
  bottom: 10px;
  left: 50%;
  transform: translate(-50%, -50%);
  position: absolute;

  border: 2px solid #10b981;
  border-radius: 6px;
  color: #10b981;
}

dialog {
  padding: 25px 50px;
  border: none;
  border-radius: 12px;

  color: #1f2937;
  background: #ecfdf5;
}

dialog::backdrop {
  background: rgba(31 41 55 / 0.75);
}

form {
  display: flex;
  flex-direction: column;
  gap: 16px;
}

form div {
  display: flex;
  justify-content: flex-start;
  align-items: center;
  gap: 8px;
}

label {
  font-size: 1rem;
}

input[type="number"] {
  font-size: 1rem;
  color: #2f3e53;
  border: 2px solid #1f2937;
  border-radius: 6px;
  padding: 3px;
}

input[type="checkbox"] {
  all: revert;
  width: 18px;
  height: 18px;
  accent-color: #10b981;
}

